# Ocr-Character-Detection

./: CMakeLists.txt  README.md  main.cpp
code/DeepOcrDetect/: Makefile  OcrDetectExport.cpp  Rule.mak
code/DeepOcrDetect/NNIE/: nnie.h  sample_comm_ive.h
code/DeepOcrDetect/NNIE201/: sample_comm.h  sample_comm_ive.h  sample_comm_nnie.h  sample_comm_svp.h  sample_svp_nnie_software.h
code/DeepOcrDetect/NNIE201/inc/: hi_math.h
code/DeepOcrDetect/OcrExport/: OcrDetectExport.h
data/wk/: char_std_39.txt  label.txt
modify_net/densenet_TO_resnet/: densenet_deploy.prototxt
modify_net/resnet_TO_without_transpose_fc_reshape/: 原始网络结构.prototxt  去除transpose层fc层之后.prototxt
ocr_detect_include/NNIE_LIBS_SO/OcrExport/: HiImageType.h  OSAL_type.h  SDKCommon.h
ocr_detect_include/OPENCV_LIBS_SO/include/opencv2/: opencv_modules.hpp
ocr_detect_lib/OPENCVF_LIBS_SO/lib/: libavdevice.so.55.3.100  libavutil.so.52.38.100  libswresample.so.0.17.102  libswscale.so.2
ocr_detect_lib/OPENCVF_LIBS_SO/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ocr_detect_lib/OPENCVX_LIBS_SO/lib/pkgconfig/: x264.pc
ocr_detect_lib/OPENCV_LIBS_SO/lib/: libopencv_calib3d.so.2.4.9  libopencv_core.so.2.4.9  libopencv_flann.so.2.4  libopencv_highgui.so.2.4.9  libopencv_imgproc.so.2.4.9  libopencv_legacy.so.2.4.9  libopencv_ml.so.2.4.9  libopencv_objdetect.so.2.4  libopencv_photo.so.2.4.9  libopencv_superres.so.2.4.9  libopencv_videostab.so.2.4
ocr_detect_lib/OPENCV_LIBS_SO/lib/pkgconfig/: opencv.pc
